--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ a{
     text-decoration: none;
 }
 .hero{
-    background: #ff33 url('');
+    background: #ff33 url('./images/headphones.jpg');
+    background-size: cover;
+    background-position: center;
     height: 100vh;
     width: 100%;
     display: flex;
