--- a/style.css
+++ b/style.css
@@ -1,37 +1,37 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap');
-*{
-    margin:0;
+
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html{
+
+html {
     font-family: 'Poppins', sans-serif;
 }
-.full-page{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1rem;
-}
-header{
+
+header {
     width: 100%;
-    top:0;
+    top: 0;
     left: 0;
-    background-color:rgba(131, 131, 131, 0.5);
+    background-color: rgba(131, 131, 131, 0.5);
     position: fixed;
     padding: 15px 50px;
     display: flex;
     justify-content: space-between;
     z-index: 100;
 }
-header a{
+
+header a {
     margin-left: 25px;
     color: #000;
 }
-a{
+
+a {
     text-decoration: none;
 }
-.hero{
+
+.hero {
     background: #ff33 url('./images/headphones.jpg');
     background-size: cover;
     background-position: center;
@@ -40,54 +40,98 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+
 }
-.hero-content{
+
+.hero-content {
     width: 75%;
-    margin:auto;
+    margin: auto;
 }
-.scroll{
+
+.scroll {
     text-align: center;
     color: #000;
 }
-.scroll a{
-text-decoration: none;
-color: #000;
+
+.scroll a {
+    text-decoration: none;
+    color: #000;
 }
-.hero p{
+
+.hero p {
     font-size: 16px;
     margin-bottom: 7px;
 }
-.hero h1{
+
+.hero h1 {
     font-size: 51px;
     line-height: 1.19;
     margin-bottom: 20px;
 }
-.hero-content a{
-    font-size:13px;
-    color:red;
-    background:#fff;
-    padding:7px 20px;
+
+.hero-content a {
+    font-size: 13px;
+    color: red;
+    background: #fff;
+    padding: 7px 20px;
     border-radius: 20px;
 }
 
-h1,h2,h3,h4,h5{
+h1,
+h2,
+h3,
+h4,
+h5 {
     margin-bottom: 15px;
 }
-.intro{
+
+.intro {
     display: grid;
     grid-template-columns: 1fr 1fr;
     
-
 }
-.intro p{
+
+.intro p {
     max-width: 550px;
     margin-bottom: 15px;
 }
-.info-image{
-    background-color: #9999;
+
+.info-image {
+    width: 100%;
+    position: relative;
 }
-main,section{
-    padding: 100px 0;
+
+.info-image img {
+    width: 40%;
+    height: auto;
+    border-radius: 50%;
+    margin: 0 auto;
+    position: absolute;
+    right: 180px;
+    top: 20px;
 
 }
+
+.heading {
+    padding: 50px 120px;
+    background: rgb(226,223,36);
+    background: linear-gradient(86deg, rgba(226,223,36,1) 0%, rgba(133,115,23,1) 52%, rgba(0,0,0,1) 100%);
+    margin: auto;
+    margin-bottom: 50px;
+    width: 100vw;
+    margin-top: 50px;
+}
+.grid {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));display: grid;
+        grid-template-rows: repeat(auto-fill, minmax(250px, 200px));
+        grid-gap: 20px;
+        position: relative;
+        margin: 20px;
+        height: 500px;
+
+}
+.project{
+    background:#222;
+}
+
+
