--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ header {
   z-index: 100;
 }
 
+header a.hamburger {
+  display: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 header a {
   margin-left: 25px;
   color: #000;
@@ -202,5 +209,9 @@ MEDIA QUERIES
 
   nav a {
     margin: auto;
+  }
+
+  header a.hamburger {
+    display: block;
   }
 }
