--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(131, 131, 131, 0.5);
+  background-color: rgba(31, 31, 31, 0.8);
   position: fixed;
   padding: 15px 50px;
   display: flex;
@@ -31,7 +31,7 @@ header a.hamburger {
 
 header a {
   margin-left: 25px;
-  color: #000;
+  color: rgb(255, 255, 255);
 }
 
 a {
